# poc-projects

./: .gitignore  LICENSE
projector-test/: CMakeLists.txt  README.md  qml.qrc
projector-test/include/projector_test/: datasource.h  dummydatasource.h  motorstatescanner.h  powermeterscanner.h
projector-test/src/: CustomLabel.qml  PageBackground.qml  ScopeView.qml  SideBar.qml  SideBarForm.ui.qml  datasource.cpp  dummydatasource.cpp  main.cpp  main.qml  mainform.ui.qml  motorstatescanner.cpp  powermeterscanner.cpp
projector_test_atmega328p/: platformio.ini
projector_test_atmega328p/src/: main.cpp
projector_test_datavis/: CMakeLists.txt  datareader.cpp  datareader.h  main.cpp  main.qml
